--- a/index.html
+++ b/index.html
@@ -76,7 +76,38 @@
             <div class="no-padding portfolio_container">
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6  fashion logo">
-                    <a href="single-project.html" class="portfolio_item">
+                    <a href="#" class="portfolio_item">
+                        <img src="img/p15.jpg" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>X</span>
+                                    <em>Graphic Design</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+                <!-- single work -->
+                <div class="col-md-3 col-sm-6  fashion logo">
+                    <a href="#" class="portfolio_item">
+                        <img src="img/p14.jpg" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>The Remnants</span>
+                                    <em>Graphic Design</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+		    
+                <!-- single work -->
+                <div class="col-md-3 col-sm-6  fashion logo">
+                    <a href="#" class="portfolio_item">
                         <img src="img/p01.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
@@ -92,7 +123,7 @@
 
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 graphics">
-                    <a href="single-project.html" class="portfolio_item">
+                    <a href="#" class="portfolio_item">
                         <img src="img/p07.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
@@ -108,7 +139,7 @@
 
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 graphics">
-                    <a href="single-project.html" class="portfolio_item">
+                    <a href="#" class="portfolio_item">
                         <img src="img/p08.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
@@ -124,7 +155,7 @@
 
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 graphics">
-                    <a href="single-project.html" class="portfolio_item">
+                    <a href="#" class="portfolio_item">
                         <img src="img/p03.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
